--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 PORT=3333
-MONGO_DB_URI=mongodb+srv://<USERNAME>:<PASSWORD>@$<CLUSTER>/<DATABASE>?retryWrites=true&w=majority
+MONGO_DB_URI=stringconeccao/nome-do-banco?retryWrites=true&w=majority
