--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "zod": "^3.24.1"
