--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 PORT=3333
-MONGO_DB_URI=stringconeccao/nome-do-banco?retryWrites=true&w=majority
+MONGO_DB_URI=string-coneccao
+MONGO_DB_NAME=nome-do-banco
+MONGO_DB_PARAMS=?retryWrites=true&w=majority
