--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "zod": "^3.24.1"
