--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "dev": "node --env-file=.env --watch src/server.js",
-    "start": "node --env-file=.env src/server.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
